# skale-consensus

./: .clang-format  .codacy.yml  .gitignore  .gitmodules  .mergify.yaml  .travis.yml  .travis.yml.old  Agent.cpp  Agent.h  CMakeLists.txt  ConsensusTest.cpp  ConsensusTest.h  Consensusd.cpp  Consensusd.h  Consensust.cpp  Consensust.h  Dockerfile  DockerfileBase  ENGINE_VERSION  JsonStubClient.h  Log.cpp  Log.h  Makefile  README.md  Readme.md  SECURITY.md  SkaleCommon.cpp  SkaleCommon.h  SkaleConfig.cpp  SkaleConfig.h  SkaleLog.cpp  SkaleLog.h  Skaled.cpp  Skaled.h  buckaroo.json  buckaroo.lock.json  cmake_install.cmake  consensus.cbp  consensusd.cbp  gcc_ver_query.sh  (+7 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
SkaleDeps/: build.sh
abstracttcpclient/: AbstractClientAgent.cpp  AbstractClientAgent.h
abstracttcpserver/: AbstractServerAgent.cpp  AbstractServerAgent.h  ConnectionStatus.h
blockdecrypt/: README.md
chains/: BlockErrorAnalyzer.cpp  BlockErrorAnalyzer.h  CryptoSigner.cpp  Schain.cpp  Schain.h  SchainDispatchThreadPool.cpp  SchainDispatchThreadPool.h  SchainGettersSetters.cpp  SchainMessageThreadPool.cpp  SchainMessageThreadPool.h  SchainTest.cpp  SchainTest.h  TestConfig.cpp  TestConfig.h
cmake/: HunterGate.cmake  config.cmake  cotire.cmake  precompiledheader.cmake
cppzmq/: .travis.yml  zmq.hpp
crypto/: AESKey.cpp  AESKey.h  AesCBCKey.cpp  AesCBCKey.h  AesCbcKey.cpp  AesCbcKey.h  AesCbcKeyIVPair.cpp  AesCbcKeyIVPair.h  AesGcmKey.cpp  AesGcmKey.h  BLAKE3Hash.cpp  BLAKE3Hash.h  BLSPrivateKey.cpp  BLSPrivateKey.h  BLSPrivateKeyShare.cpp  BLSPrivateKeyShare.h  BLSPublicKey.cpp  BLSPublicKey.h  BLSSigShare.cpp  BLSSigShare.h  BLSSigShareSet.cpp  BLSSigShareSet.h  BLSSignature.cpp  BLSSignature.h  Base64.cpp  BlockDecryptedArguments.cpp  BlockEncryptedArguments.cpp  BlockEncryptedArguments.h  BlockVerifier.cpp  BlockVerifier.h  ConsensusBLSPrivateKey.cpp  ConsensusBLSPrivateKey.h  ConsensusBLSPrivateKeyShare.cpp  ConsensusBLSPrivateKeyShare.h  ConsensusBLSPublicKey.cpp  ConsensusBLSPublicKey.h  ConsensusBLSSigShare.cpp  ConsensusBLSSigShare.h  ConsensusBLSSignature.cpp  ConsensusBLSSignature.h  (+55 more)
datastructures/: ArgumentDecryptionSet.cpp  ArgumentDecryptionSet.h  ArgumentDecryptionShare.cpp  ArgumentDecryptionShare.h  BlockAesKeyDecryptionSet.cpp  BlockAesKeyDecryptionSet.h  BlockAesKeyDecryptionShare.cpp  BlockAesKeyDecryptionShare.h  BlockDecryptedAesKeys.cpp  BlockDecryptedAesKeys.h  BlockDecryptedArguments.cpp  BlockDecryptedArguments.h  BlockDecryptionSet.cpp  BlockDecryptionSet.h  BlockDecryptionShare.cpp  BlockDecryptionShare.h  BlockDecryptionShares.cpp  BlockDecryptionShares.h  BlockEncryptedAesKeys.cpp  BlockEncryptedAesKeys.h  BlockEncryptedArguments.cpp  BlockEncryptedArguments.h  BlockProposal.cpp  BlockProposal.h  BlockProposalFragment.cpp  BlockProposalFragment.h  BlockProposalFragmentList.cpp  BlockProposalFragmentList.h  BlockProposalSet.cpp  BlockProposalSet.h  BooleanProposalVector.cpp  BooleanProposalVector.h  CommittedBlock.cpp  CommittedBlock.h  CommittedBlockFragment.cpp  CommittedBlockFragment.h  CommittedBlockFragmentList.cpp  CommittedBlockFragmentList.h  CommittedBlockList.cpp  CommittedBlockList.h  (+35 more)
db/: BlockDB.cpp  BlockDB.h  BlockProposalDB.cpp  BlockProposalDB.h  BlockSigShareDB.cpp  BlockSigShareDB.h  CacheLevelDB.cpp  CacheLevelDB.h  ComittedTransactionDB.h  CommittedTransactionDB.cpp  CommittedTransactionDB.h  ConsensusStateDB.cpp  ConsensusStateDB.h  DAProofDB.cpp  DAProofDB.h  DASigShareDB.cpp  DASigShareDB.h  DBTests.cpp  FIFOLevelDB.cpp  FIFOLevelDB.h  InternalInfoDB.cpp  InternalInfoDB.h  LevelDB.cpp  LevelDB.h  LevelDBOptions.h  MsgDB.cpp  MsgDB.h  OutgoingMsgDB.cpp  OutgoingMsgDB.h  PriceDB.cpp  PriceDB.h  ProposalHashDB.cpp  ProposalHashDB.h  ProposalVectorDB.cpp  ProposalVectorDB.h  RandomDB.cpp  RandomDB.h  ReceivedBlockProposalsDB.cpp  ReceivedBlockProposalsDB.h  ReceivedDASigSharesDB.cpp  (+7 more)
docs/: README.md  block_signature_verification.md  consensus-activity-diagram.adoc  consensus-block-proposal-spec.md  exit.md  fullsync.md  running-tests.md  troubleshooting.md
exceptions/: ConnectionRefusedException.cpp  ConnectionRefusedException.h  CouldNotReadPartialDataHashesException.cpp  CouldNotReadPartialDataHashesException.h  CouldNotSendMessageException.cpp  CouldNotSendMessageException.h  EngineInitException.cpp  EngineInitException.h  Exception.cpp  Exception.h  ExitRequestedException.cpp  ExitRequestedException.h  FatalError.cpp  FatalError.h  IOException.cpp  IOException.h  InvalidArgumentException.cpp  InvalidArgumentException.h  InvalidHashException.cpp  InvalidHashException.h  InvalidMessageFormatException.h  InvalidNodeIDException.h  InvalidSchainException.h  InvalidSchainIndexException.h  InvalidSignatureException.cpp  InvalidSignatureException.h  InvalidSourceIPException.h  InvalidStateException.cpp  InvalidStateException.h  LevelDBException.cpp  LevelDBException.h  NetworkProtocolException.cpp  NetworkProtocolException.h  OldBlockIDException.cpp  OldBlockIDException.h  OracleException.cpp  OracleException.h  ParsingException.cpp  ParsingException.h  PingException.cpp  (+7 more)
headers/: AbstractBlockRequestHeader.cpp  AbstractBlockRequestHeader.h  BasicHeader.cpp  BasicHeader.h  BlockDecryptRequestHeader.cpp  BlockDecryptRequestHeader.h  BlockDecryptResponseHeader.cpp  BlockDecryptResponseHeader.h  BlockFinalizeRequestHeader.cpp  BlockFinalizeRequestHeader.h  BlockFinalizeResponseHeader.cpp  BlockFinalizeResponseHeader.h  BlockProposalHeader.cpp  BlockProposalHeader.h  BlockProposalRequestHeader.cpp  BlockProposalRequestHeader.h  BlockProposalResponseHeader.cpp  BlockProposalResponseHeader.h  CatchupRequestHeader.cpp  CatchupRequestHeader.h  CatchupResponseHeader.cpp  CatchupResponseHeader.h  CommittedBlockHeader.cpp  CommittedBlockHeader.h  DAProofRequestHeader.cpp  DAProofRequestHeader.h  DAProofResponseHeader.cpp  DAProofResponseHeader.h  FinalProposalResponseHeader.cpp  FinalProposalResponseHeader.h  Header.cpp  Header.h  MissingTransactionsRequestHeader.cpp  SigShareResponseHeader.cpp  (+8 more)
(+420 files in other folders)
